--- a/index.html
+++ b/index.html
@@ -4,8 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sinal Verde - Software Gestão Escolas de Condução</title>
+
+    <link rel="stylesheet" href="src/styles/styles.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="icon" href="src/images/favicon.ico" type="image/x-icon">
 </head>
-<body>
-    
+<body class="p-3">
+    <nav class="d-flex align-items-center justify-content-center p-3">
+        <span>Projeto em desenvolvimento</span>
+    </nav>
+    <section class="container d-flex flex-column vh-100">
+        <div id="particles-js"></div>
+        <div class="container my-5">
+            <div class="d-flex justify-space-between align-items-center">
+                <div class="d-flex align-items-center justify-content-center w-50">
+                    <h1 class="p-3">Um software para as escolas de <span class="text-green">condução e os seus alunos</span></h1>
+                </div>
+                <div class="d-flex align-items-center justify-content-center w-50">
+                    <img class="logo p-3" src="/src/images/logo.png" alt="logo">
+                </div>
+            </div>
+            <div class="d-flex justify-content-between align-items-center my-5">
+                <h2 class="light text-green">Financeiro</h2>
+                <h2 class="light">Aulas</h2>
+                <h2 class="light text-green">Alunos</h2>
+                <h2 class="light">Veículos</h2>
+                <h2 class="light text-green">Notificações</h2>
+            </div>
+            <div clas="d-flex justify-content-center align-items-center w-100">
+                <h2 class="bold text-center">Estado do Projeto</h2>
+            </div>
+        </div>
+    </section>
+    <section class="container d-flex flex-column h-100">
+
+    </section>
+
+    <script src="/src/js/particle.js/particles.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-7+9e2b1d8f4c8f0a2b5c3d4e5f6a7b8c9d0e1f2a3b4c5d6e7f8g9h0i1j2k3l4" crossorigin="anonymous"></script>
+
+    <script>
+        particlesJS.load("particles-js", "/src/js/particle.js/ParticlesConfig.json");
+    </script>
 </body>
 </html>
