--- a/index.html
+++ b/index.html
@@ -7,33 +7,68 @@
 
     <link rel="stylesheet" href="src/styles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="src/images/favicon.ico" type="image/x-icon">
 </head>
 <body class="p-3">
-    <nav class="d-flex align-items-center justify-content-center p-3">
+    <nav class="d-flex align-items-center justify-content-center p-3 w-100">
         <span>Projeto em desenvolvimento</span>
     </nav>
     <section class="container d-flex flex-column vh-100">
         <div id="particles-js"></div>
-        <div class="container my-5">
-            <div class="d-flex justify-space-between align-items-center">
-                <div class="d-flex align-items-center justify-content-center w-50">
-                    <h1 class="p-3">Um software para as escolas de <span class="text-green">condução e os seus alunos</span></h1>
+        <div class="d-flex d-md-none justify-content-center align-items-center my-3">
+            <img class="logo-mobile" src="/src/images/logo.png" alt="logo">
+        </div>
+        <div class="container mb-3 my-md-5">
+            <div class="d-flex w-100 justify-content-center justify-content-md-between align-items-center">
+                <div class="d-flex align-items-center justify-content-center w-100 w-md-50 my-3 my-md-0">
+                    <h1 class="p-md-3 text-center text-md-start mb-0">Um software para as escolas de <span class="text-green">condução e os seus alunos</span></h1>
                 </div>
-                <div class="d-flex align-items-center justify-content-center w-50">
+                <div class="align-items-center justify-content-center w-50 d-none d-md-flex">
                     <img class="logo p-3" src="/src/images/logo.png" alt="logo">
                 </div>
             </div>
-            <div class="d-flex justify-content-between align-items-center my-5">
+            <div class="d-none d-md-flex justify-content-between align-items-center my-5 gap-3">
                 <h2 class="light text-green">Financeiro</h2>
                 <h2 class="light">Aulas</h2>
                 <h2 class="light text-green">Alunos</h2>
                 <h2 class="light">Veículos</h2>
                 <h2 class="light text-green">Notificações</h2>
             </div>
-            <div clas="d-flex justify-content-center align-items-center w-100">
-                <h2 class="bold text-center">Estado do Projeto</h2>
+            <div class="carousel slide d-block d-md-none my-5" data-bs-ride="carousel">
+                <div class="carousel-inner text-center">
+                    <div class="carousel-item active">
+                        <h2 class="light text-green mb-0">Financeiro</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <h2 class="light mb-0">Aulas</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <h2 class="light text-green mb-0">Alunos</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <h2 class="light mb-0">Veículos</h2>
+                    </div>
+                    <div class="carousel-item">
+                        <h2 class="light text-green mb-0">Notificações</h2>
+                    </div>
+                </div>
+            </div>
+            <div clas="d-flex justify-content-center align-items-center w-100 mb-3">
+                <h2 class="bold text-center mb-4">Estado do Projeto</h2>
+            </div>
+            <div class="d-flex justify-content-center align-items-center w-100 flex-column">
+                <div class="progress w-100 position-relative d-flex align-items-center mb-3">
+                    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+                    <div class="d-flex justify-content-between align-items-center text-white w-100 position-absolute px-3 px-md-5">
+                        <i class="fa-solid fa-pen-ruler"></i>
+                        <i class="fa-solid fa-code"></i>
+                        <i class="fa-solid fa-vial-circle-check"></i>
+                        <i class="fa-solid fa-rocket"></i>
+                    </div>
+                </div>
+                <span class="text-center">Atualmente: Desenvolvimento</span>
             </div>
         </div>
     </section>
@@ -42,10 +77,21 @@
     </section>
 
     <script src="/src/js/particle.js/particles.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-7+9e2b1d8f4c8f0a2b5c3d4e5f6a7b8c9d0e1f2a3b4c5d6e7f8g9h0i1j2k3l4" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a5bf969c7d.js" crossorigin="anonymous"></script>
 
+    <!-- particle js -->
     <script>
         particlesJS.load("particles-js", "/src/js/particle.js/ParticlesConfig.json");
+    </script>
+
+    <!-- animate progress bar -->
+    <script>
+        const bar = document.querySelector('.progress-bar');
+        const value = bar.getAttribute('aria-valuenow');
+        bar.style.setProperty('--target-width', value + '%');
+        bar.style.width = 0;
+        bar.classList.add('animate-progress');
     </script>
 </body>
 </html>
