--- a/index.html
+++ b/index.html
@@ -11,21 +11,20 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="src/images/favicon.ico" type="image/x-icon">
 </head>
-<body class="p-3">
-    <nav class="d-flex align-items-center justify-content-center p-3 w-100">
-        <span>Projeto em desenvolvimento</span>
-    </nav>
-    <section class="container d-flex flex-column vh-100">
+<body class="p-3 position-relative">
+    <section class="container d-flex flex-column justify-content-center h-100">
+        <nav class="position-absolute start-0 top-0 w-100 d-flex justify-content-center align-items-center">
+            <div class="warning-top text-center py-3 my-3">
+                <span>Projeto em desenvolvimento</span>
+            </div>
+        </nav>
         <div id="particles-js"></div>
-        <div class="d-flex d-md-none justify-content-center align-items-center my-3">
-            <img class="logo-mobile" src="/src/images/logo.png" alt="logo">
-        </div>
         <div class="container mb-3 my-md-5">
-            <div class="d-flex w-100 justify-content-center justify-content-md-between align-items-center">
-                <div class="d-flex align-items-center justify-content-center w-100 w-md-50 my-3 my-md-0">
+            <div class="d-flex w-100 justify-content-center justify-content-md-between align-items-center flex-column-reverse flex-md-row">
+                <div class="d-flex align-items-center justify-content-center w-100">
                     <h1 class="p-md-3 text-center text-md-start mb-0">Um software para as escolas de <span class="text-green">condução e os seus alunos</span></h1>
                 </div>
-                <div class="align-items-center justify-content-center w-50 d-none d-md-flex">
+                <div class="align-items-center justify-content-center w-50 d-flex">
                     <img class="logo p-3" src="/src/images/logo.png" alt="logo">
                 </div>
             </div>
@@ -55,10 +54,8 @@
                     </div>
                 </div>
             </div>
-            <div clas="d-flex justify-content-center align-items-center w-100 mb-3">
-                <h2 class="bold text-center mb-4">Estado do Projeto</h2>
-            </div>
             <div class="d-flex justify-content-center align-items-center w-100 flex-column">
+                <h2 class="bold mt-5 mb-4">Estado do Projeto</h2>
                 <div class="progress w-100 position-relative d-flex align-items-center mb-3">
                     <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
                     <div class="d-flex justify-content-between align-items-center text-white w-100 position-absolute px-3 px-md-5">
@@ -72,8 +69,17 @@
             </div>
         </div>
     </section>
-    <section class="container d-flex flex-column h-100">
-
+    <section class="container d-flex">
+        <div class="d-flex justify-content-between align-items-center my-3 flex-column-reverse flex-md-row">
+            <div class="d-flex flex-column text-center text-md-start w-50">
+                <h1 class="py-3 mb-0">A solução ideal para<span class="text-green"> a tua escola</span></h1>
+                <p>Farto de papéis, dosiers, filas intermináveis na secretária, faturas manuais e aulas marcadas em cadernos?</p>
+                <p>Aqui nós livramos-te disso! Da-mos as formas mais práticas e simples para gerires tudo da tua escola de condução, apenas num único sítio.</p> 
+            </div>
+            <div class="d-flex align-items-center justify-content-center w-50">
+                <img class="mac-iphone-img" src="/src/images/mac_and_iphone.png" alt="mac and iphone with application">
+            </div>
+        </div>
     </section>
 
     <script src="/src/js/particle.js/particles.min.js"></script>
