--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container mb-3 my-md-5">
             <div class="d-flex w-100 justify-content-center justify-content-md-between align-items-center flex-column-reverse flex-md-row">
                 <div class="d-flex align-items-center justify-content-center w-100">
-                    <h1 class="p-md-3 text-center text-md-start mb-0">Um software para as escolas de <span class="text-green">condução e os seus alunos</span></h1>
+                    <h1 class="p-md-3 text-center text-md-start mb-0">Um software para as escolas <span class="text-green">de condução e seus alunos</span></h1>
                 </div>
                 <div class="align-items-center justify-content-center w-50 d-flex">
                     <img class="logo p-3" src="/src/images/logo.png" alt="logo">
@@ -73,8 +73,8 @@
         <div class="d-flex justify-content-between align-items-center my-3 flex-column-reverse flex-md-row">
             <div class="d-flex flex-column text-center text-md-start mac-iphone-text">
                 <h1 class="py-3 mb-0">A solução ideal para<span class="text-green"> a tua escola</span></h1>
-                <p>Farto de papéis, dosiers, filas intermináveis na secretária, faturas manuais e aulas marcadas em cadernos?</p>
-                <p>Aqui nós livramos-te disso! Da-mos as formas mais práticas e simples para gerires tudo da tua escola de condução, apenas num único sítio.</p> 
+                <p>Farto de papéis, dossiês, filas intermináveis na secretaria, faturas manuais e aulas marcadas em cadernos?</p>
+                <p>Aqui livramos-te disso! Proporcionamos-te as formas mais práticas e simples para gerires tudo da tua escola de condução, apenas num único sítio.</p> 
             </div>
             <div class="d-flex align-items-center justify-content-center w-50">
                 <img class="mac-iphone-img" src="/src/images/mac_and_iphone.png" alt="mac and iphone with application">
@@ -149,9 +149,9 @@
             <h1 class="who-we-are-text">Mas afinal <span class="text-green">quem somos</span></h1>
             <img class="d-none d-md-block" src="/src/images/who_we_are_right.png" alt="???">
         </div>
-        <h2 class="bold mb-3">Nós somos <span class="text-green">estudantes!</span></h2>
+        <h2 class="bold mb-3">Somos <span class="text-green">estudantes!</span></h2>
         <p class="mb-5">
-            O projeto nasceu da experiência de dois estudantes, que ao tirarem a carta de condução, perceberam a falta de atualização dos sistemas utilizados pelas escolas. Diante destes desafios, decidimos transformar esta necessidade numa oportunidade, desenvolvendo como um projeto universitário para modernizar e simplificar a gestão das escolas de condução.
+            O projeto nasceu da experiência de dois estudantes, que ao tirarem a carta de condução, perceberam a falta de atualização dos sistemas utilizados pelas escolas. Diante destes desafios, decidimos transformar esta necessidade numa oportunidade, desenvolvendo esta solução como um projeto universitário.
         </p>
         <h2 class="bold mb-3"><span class="text-green">Quais os</span> nosso objetivos?</h2>
         <p>
