--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                         </p>
                     </div>
                     <div class="image-functionality d-flex justify-content-center justify-content-lg-end align-items-center w-100 w-md-50 mb-4 mb-md-0">
-                        <img class="image-functionality-financeiro img-fluid" src="/src/images/tab_financeiro.png" alt="moloni e unicre">
+                        <img class="image-functionality-financeiro img-fluid" src="/src/images/tab_aulas.png" alt="moloni e unicre">
                     </div>
                 </div>
             </div>
