--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
     <section class="container my-2">
         <h1 class="mb-5 text-center"><span class="text-green">Fale </span>connosco!<i class="fa-solid fa-phone text-green ms-3"></i></h1>
         <div class="d-flex justify-content-center align-items-center">
-            <form action="https://api.miguelvasconcelos.com/contact-site" method="post">
+            <form action="https://api.miguelvasconcelos.com/contact-site" method="post" target="_blank">
                 <div class="row">
                     <div class="col-md-6 mb-3">
                         <div class="input-wrapper">
