--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     </script>
 
     <!-- contact form -->
-    <script>
+    <!-- <script>
         document.getElementById("contactForm").addEventListener("submit", async function(e) {
         e.preventDefault();
 
@@ -342,6 +342,6 @@
             alert("Erro ao submeter o formulário.");
         }
         });
-    </script>
+    </script> -->
 </body>
 </html>
