--- a/index.html
+++ b/index.html
@@ -307,41 +307,45 @@
     </script>
 
     <!-- contact form -->
-    <!-- <script>
-        document.getElementById("contactForm").addEventListener("submit", async function(e) {
-        e.preventDefault();
+    <script>
+        const form = document.getElementById('contactForm');
 
-        const form = e.target;
-        const formData = new FormData(form);
+        form.addEventListener('submit', async (e) => {
+            e.preventDefault(); // impede comportamento padrão
 
-        // Buscar o token do widget do Turnstile
-        const turnstileResponse = document.querySelector('input[name="cf-turnstile-response"]')?.value;
+            const formData = new FormData(form);
 
-        if (!turnstileResponse) {
-            alert("Erro: Falha ao obter o token do Turnstile.");
+            // O Turnstile insere dinamicamente este input, mas podemos forçar a verificação
+            const turnstileResponse = document.querySelector('input[name="cf-turnstile-response"]')?.value;
+
+            if (!turnstileResponse) {
+            alert("Captcha não resolvido. Por favor tente novamente.");
             return;
-        }
+            }
 
-        // Confirmar que o token vai no payload
-        formData.append("cf-turnstile-response", turnstileResponse);
+            // Garante que está no FormData
+            formData.set("cf_turnstile_response", turnstileResponse);
 
-        try {
+            try {
             const response = await fetch("https://api.miguelvasconcelos.com/contact-site", {
-            method: "POST",
-            body: formData,
+                method: "POST",
+                body: formData,
             });
 
-            const result = await response.text();
-            console.log("Resposta:", result);
+            const result = await response.json();
 
-            // Faz o que quiseres com a resposta aqui (ex: mostrar mensagem)
-            alert("Submetido com sucesso!");
+            if (!response.ok) {
+                throw new Error(result.detail || "Erro ao submeter o formulário.");
+            }
 
-        } catch (error) {
-            console.error("Erro na submissão:", error);
-            alert("Erro ao submeter o formulário.");
-        }
+            alert(result.message || "Mensagem enviada com sucesso!");
+            form.reset(); // limpa formulário
+            turnstile.reset(); // reinicia CAPTCHA se quiseres
+            } catch (err) {
+            console.error(err);
+            alert("Erro: " + err.message);
+            }
         });
-    </script> -->
+    </script>
 </body>
 </html>
