--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 
     <link rel="stylesheet" href="src/styles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="src/images/favicon.ico" type="image/x-icon">
 
@@ -311,11 +314,10 @@
         const form = document.getElementById('contactForm');
 
         form.addEventListener('submit', async (e) => {
-            e.preventDefault(); // impede comportamento padrão
+            e.preventDefault();
 
             const formData = new FormData(form);
 
-            // O Turnstile insere dinamicamente este input, mas podemos forçar a verificação
             const turnstileResponse = document.querySelector('input[name="cf-turnstile-response"]')?.value;
 
             if (!turnstileResponse) {
@@ -323,7 +325,6 @@
             return;
             }
 
-            // Garante que está no FormData
             formData.set("cf_turnstile_response", turnstileResponse);
 
             try {
@@ -339,13 +340,34 @@
             }
 
             alert(result.message || "Mensagem enviada com sucesso!");
-            form.reset(); // limpa formulário
-            turnstile.reset(); // reinicia CAPTCHA se quiseres
+            form.reset();
+            turnstile.reset(); 
             } catch (err) {
             console.error(err);
             alert("Erro: " + err.message);
             }
         });
+    </script>
+
+    <!-- animação botão tab -->
+     <script>
+        const tabs = document.querySelectorAll('.nav-link');
+        let index = 0;
+
+        function animateTab() {
+            tabs.forEach(tab => {
+                tab.classList.remove('animate__animated', 'animate__heartBeat', 'animate__slow');
+            });
+
+            const current = tabs[index];
+            current.classList.add('animate__animated', 'animate__heartBeat' , 'animate__slow');
+
+            index = (index + 1) % tabs.length;
+
+            setTimeout(animateTab, 4000); 
+        }
+
+        animateTab();
     </script>
 </body>
 </html>
