--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         </p>
                     </div>
                     <div class="image-functionality d-flex justify-content-center justify-content-lg-end align-items-center w-100 w-md-50 mb-4 mb-md-0">
-                        <img class="image-functionality-financeiro img-fluid" src="/src/images/tab_aulas.png" alt="classroom with students">
+                        <img class="image-functionality-aulas img-fluid" src="/src/images/tab_aulas.png" alt="classroom with students">
                     </div>
                 </div>
             </div>
@@ -156,8 +156,8 @@
                             Agora é sempre a abrir!
                         </p>
                     </div>
-                    <div class="image-functionality d-flex justify-content-center justify-content-lg-end align-items-center w-100 w-md-50 mb-4 mb-md-0">
-                        <img class="image-functionality-financeiro img-fluid" src="/src/images/tab_alunos.png" alt="student with mobile phone">
+                    <div class="image-functionality d-flex justify-content-center align-items-center w-100 w-md-50 mb-4 mb-md-0">
+                        <img class="image-functionality-alunos img-fluid" src="/src/images/tab_alunos.png" alt="student with mobile phone">
                     </div>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                         </p>
                     </div>
                     <div class="image-functionality d-flex justify-content-center justify-content-lg-end align-items-center w-100 w-md-50 mb-4 mb-md-0">
-                        <img class="image-functionality-financeiro img-fluid" src="/src/images/tab_alunos.png" alt="student with mobile phone">
+                        <img class="image-functionality-veiculos img-fluid" src="/src/images/tab_veiculos.png" alt="student with mobile phone">
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                         </p>
                     </div>
                     <div class="image-functionality d-flex justify-content-center justify-content-lg-end align-items-center w-100 w-md-50 mb-4 mb-md-0">
-                        <img class="image-functionality-financeiro img-fluid" src="/src/images/tab_alunos.png" alt="student with mobile phone">
+                        <img class="image-functionality-notificacoes img-fluid" src="/src/images/tab_notificacoes.png" alt="student with mobile phone">
                     </div>
                 </div>
             </div>
