--- a/index.html
+++ b/index.html
@@ -296,21 +296,21 @@
     <script src="https://kit.fontawesome.com/a5bf969c7d.js" crossorigin="anonymous"></script>
 
     <!-- particle js -->
-    <script>
+    <!-- <script>
         particlesJS.load("particles-js", "/src/js/particle.js/ParticlesConfig.json");
-    </script>
+    </script> -->
 
     <!-- animate progress bar -->
-    <script>
+    <!-- <script>
         const bar = document.querySelector('.progress-bar');
         const value = bar.getAttribute('aria-valuenow');
         bar.style.setProperty('--target-width', value + '%');
         bar.style.width = 0;
         bar.classList.add('animate-progress');
-    </script>
+    </script> -->
 
     <!-- contact form -->
-    <script>
+    <!-- <script>
         const form = document.getElementById('contactForm');
 
         form.addEventListener('submit', async (e) => {
@@ -347,10 +347,10 @@
             alert("Erro: " + err.message);
             }
         });
-    </script>
+    </script> -->
 
     <!-- animação botão tab -->
-     <script>
+     <!-- <script>
         const tabs = document.querySelectorAll('.nav-link');
         let index = 0;
 
@@ -368,6 +368,8 @@
         }
 
         animateTab();
-    </script>
+    </script> -->
+
+    <script src="/src/js/main.js"></script>
 </body>
 </html>
