rename src folder

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sinal Verde - Software Gestão Escolas de Condução</title>
 
-    <link rel="stylesheet" href="src/styles/styles.css">
+    <link rel="stylesheet" href="/assets/styles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="src/images/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 
     <script src="https://challenges.cloudflare.com/turnstile/v0/api.js" async defer></script>
 </head>
@@ -30,7 +30,7 @@
                     <h1 class="p-md-3 text-center text-md-start mb-0">Um software para as escolas <span class="text-green">de condução e seus alunos</span></h1>
                 </div>
                 <div class="align-items-center justify-content-center w-50 d-flex">
-                    <img class="logo p-3" src="/src/images/logo.png" alt="logo">
+                    <img class="logo p-3" src="/assets/images/logo.png" alt="logo">
                 </div>
             </div>
             <div class="d-none d-md-flex justify-content-between align-items-center my-5 gap-3">
@@ -82,14 +82,14 @@
                 <p>Aqui livramos-te disso! Proporcionamos-te as formas mais práticas e simples para gerires tudo da tua escola de condução, apenas num único sítio.</p> 
             </div>
             <div class="d-flex align-items-center justify-content-center w-50">
-                <img class="mac-iphone-img" src="/src/images/mac_and_iphone.png" alt="mac and iphone with application">
+                <img class="mac-iphone-img" src="/assets/images/mac_and_iphone.png" alt="mac and iphone with application">
             </div>
         </div>
     </section>
     <section class="container my-2 d-flex flex-column justify-content-center align-items-center">
         <div class="functionality-text d-flex flex-column justify-content-center align-items-center mb-3 mb-md-5">
             <h1 class="p-md-3 text-center">Funcionalidades para todos <span class="text-green">os cantos da tua escola</span></h1>
-            <img src="/src/images/rows.png" alt="">
+            <img src="/assets/images/rows.png" alt="">
         </div>
 
         <nav class="nav nav-pills nav-justified my-3 my-md-5 w-100 px-3 gap-3" id="myTab" role="tablist">
@@ -115,7 +115,7 @@
                         </p>
                     </div>
                     <div class="image-functionality d-flex justify-content-center justify-content-lg-end align-items-center w-100 w-md-50 mb-4 mb-md-0">
-                        <img class="image-functionality-financeiro img-fluid" src="/src/images/tab_financeiro.png" alt="moloni e unicre">
+                        <img class="image-functionality-financeiro img-fluid" src="/assets/images/tab_financeiro.png" alt="moloni e unicre">
                     </div>
                 </div>
             </div>
@@ -136,7 +136,7 @@
                         </p>
                     </div>
                     <div class="image-functionality d-flex justify-content-center justify-content-lg-end align-items-center w-100 w-md-50 mb-4 mb-md-0">
-                        <img class="image-functionality-aulas img-fluid" src="/src/images/tab_aulas.png" alt="classroom with students">
+                        <img class="image-functionality-aulas img-fluid" src="/assets/images/tab_aulas.png" alt="classroom with students">
                     </div>
                 </div>
             </div>
@@ -157,7 +157,7 @@
                         </p>
                     </div>
                     <div class="image-functionality d-flex justify-content-center align-items-center w-100 w-md-50 mb-4 mb-md-0">
-                        <img class="image-functionality-alunos img-fluid" src="/src/images/tab_alunos.png" alt="student with mobile phone">
+                        <img class="image-functionality-alunos img-fluid" src="/assets/images/tab_alunos.png" alt="student with mobile phone">
                     </div>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                         </p>
                     </div>
                     <div class="image-functionality d-flex justify-content-center justify-content-lg-end align-items-center w-100 w-md-50 mb-4 mb-md-0">
-                        <img class="image-functionality-veiculos img-fluid" src="/src/images/tab_veiculos.png" alt="student with mobile phone">
+                        <img class="image-functionality-veiculos img-fluid" src="/assets/images/tab_veiculos.png" alt="student with mobile phone">
                     </div>
                 </div>
             </div>
@@ -193,7 +193,7 @@
                         </p>
                     </div>
                     <div class="image-functionality d-flex justify-content-center justify-content-lg-end align-items-center w-100 w-md-50 mb-4 mb-md-0">
-                        <img class="image-functionality-notificacoes img-fluid" src="/src/images/tab_notificacoes.png" alt="student with mobile phone">
+                        <img class="image-functionality-notificacoes img-fluid" src="/assets/images/tab_notificacoes.png" alt="student with mobile phone">
                     </div>
                 </div>
             </div>
@@ -203,11 +203,11 @@
     <section class="container my-2 text-center text-md-start ">
         <div class="d-flex flex-column flex-md-row justify-content-center align-items-center mb-5">
             <div class="d-flex">
-                <img src="/src/images/who_we_are_left.png" alt="???">
-                <img class="d-block d-md-none" src="/src/images/who_we_are_right.png" alt="???">
+                <img src="/assets/images/who_we_are_left.png" alt="???">
+                <img class="d-block d-md-none" src="/assets/images/who_we_are_right.png" alt="???">
             </div>
             <h1 class="who-we-are-text">Mas afinal <span class="text-green">quem somos</span></h1>
-            <img class="d-none d-md-block" src="/src/images/who_we_are_right.png" alt="???">
+            <img class="d-none d-md-block" src="/assets/images/who_we_are_right.png" alt="???">
         </div>
         <h2 class="bold mb-3">Somos <span class="text-green">estudantes!</span></h2>
         <p class="mb-5">
@@ -218,7 +218,7 @@
             Temos como objetivo ajudar as escolas de condução a otimizar a gestão dos seus recursos e serviços, incluindo a marcação de aulas, a administração de alunos, pagamentos e muito mais. Com uma plataforma intuitiva e inovadora, permite às escolas automatizar processos, reduzir burocracias e melhorar a experiência tanto para alunos quanto para instrutores.
         </p>
     </section>
-    <img src="/src/images/divider.png" alt="divider" class="divider my-5 d-flex mx-auto">
+    <img src="/assets/images/divider.png" alt="divider" class="divider my-5 d-flex mx-auto">
 
     <section class="container my-2">
         <h1 class="mb-5 text-center text-md-start">O nosso <span class="text-green">foco</span></h1>
@@ -291,13 +291,13 @@
         <span class="text-center text-md-start ms-0 ms-md-3 copyright-text">Copyright © 2025 NexWay inc.</span>
     </footer>
     <div class="p-2"></div>
-    <script src="/src/js/particle.js/particles.min.js"></script>
+    <script src="/assets/js/particle.js/particles.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a5bf969c7d.js" crossorigin="anonymous"></script>
 
     <!-- particle js -->
     <!-- <script>
-        particlesJS.load("particles-js", "/src/js/particle.js/ParticlesConfig.json");
+        particlesJS.load("particles-js", "/assets/js/particle.js/ParticlesConfig.json");
     </script> -->
 
     <!-- animate progress bar -->
@@ -370,6 +370,6 @@
         animateTab();
     </script> -->
 
-    <script src="/src/js/main.js"></script>
+    <script src="/assets/js/main.js"></script>
 </body>
 </html>
