--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,10 +7,7 @@
 
     <link rel="stylesheet" href="/assets/styles/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-  />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="icon" href="/assets/images/favicon.ico" type="image/x-icon">
 
@@ -93,11 +90,11 @@
         </div>
 
         <nav class="nav nav-pills nav-justified my-3 my-md-5 w-100 px-3 gap-3" id="myTab" role="tablist">
-            <a class="nav-link green active" id="financeiro-tab" data-bs-toggle="tab" data-bs-target="#financeiro-tab-pane" type="button" role="tab" aria-controls="financeiro-tab-pane" aria-selected="true">Financeiro</a>
-            <a class="nav-link white" id="aulas-tab" data-bs-toggle="tab" data-bs-target="#aulas-tab-pane" type="button" role="tab" aria-controls="aulas-tab-pane" aria-selected="false">Aulas</a>
-            <a class="nav-link green" id="alunos-tab" data-bs-toggle="tab" data-bs-target="#alunos-tab-pane" type="button" role="tab" aria-controls="alunos-tab-pane" aria-selected="false">Alunos</a>
-            <a class="nav-link white" id="veiculos-tab" data-bs-toggle="tab" data-bs-target="#veiculos-tab-pane" type="button" role="tab" aria-controls="veiculos-tab-pane" aria-selected="false">Veículos</a>
-            <a class="nav-link green" id="notificacoes-tab" data-bs-toggle="tab" data-bs-target="#notificacoes-tab-pane" type="button" role="tab" aria-controls="notificacoes-tab-pane" aria-selected="false">Notificações</a>
+            <a class="nav-link green active" id="financeiro-tab" data-bs-toggle="tab" data-bs-target="#financeiro-tab-pane" role="tab" aria-controls="financeiro-tab-pane" aria-selected="true">Financeiro</a>
+            <a class="nav-link white" id="aulas-tab" data-bs-toggle="tab" data-bs-target="#aulas-tab-pane" role="tab" aria-controls="aulas-tab-pane" aria-selected="false">Aulas</a>
+            <a class="nav-link green" id="alunos-tab" data-bs-toggle="tab" data-bs-target="#alunos-tab-pane" role="tab" aria-controls="alunos-tab-pane" aria-selected="false">Alunos</a>
+            <a class="nav-link white" id="veiculos-tab" data-bs-toggle="tab" data-bs-target="#veiculos-tab-pane" role="tab" aria-controls="veiculos-tab-pane" aria-selected="false">Veículos</a>
+            <a class="nav-link green" id="notificacoes-tab" data-bs-toggle="tab" data-bs-target="#notificacoes-tab-pane" role="tab" aria-controls="notificacoes-tab-pane" aria-selected="false">Notificações</a>
         </nav>
 
         <div class="tab-content my-3 my-lg-5" id="myTabContent">
@@ -294,81 +291,6 @@
     <script src="/assets/js/particle.js/particles.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/a5bf969c7d.js" crossorigin="anonymous"></script>
-
-    <!-- particle js -->
-    <!-- <script>
-        particlesJS.load("particles-js", "/assets/js/particle.js/ParticlesConfig.json");
-    </script> -->
-
-    <!-- animate progress bar -->
-    <!-- <script>
-        const bar = document.querySelector('.progress-bar');
-        const value = bar.getAttribute('aria-valuenow');
-        bar.style.setProperty('--target-width', value + '%');
-        bar.style.width = 0;
-        bar.classList.add('animate-progress');
-    </script> -->
-
-    <!-- contact form -->
-    <!-- <script>
-        const form = document.getElementById('contactForm');
-
-        form.addEventListener('submit', async (e) => {
-            e.preventDefault();
-
-            const formData = new FormData(form);
-
-            const turnstileResponse = document.querySelector('input[name="cf-turnstile-response"]')?.value;
-
-            if (!turnstileResponse) {
-            alert("Captcha não resolvido. Por favor tente novamente.");
-            return;
-            }
-
-            formData.set("cf_turnstile_response", turnstileResponse);
-
-            try {
-            const response = await fetch("https://api.miguelvasconcelos.com/contact-site", {
-                method: "POST",
-                body: formData,
-            });
-
-            const result = await response.json();
-
-            if (!response.ok) {
-                throw new Error(result.detail || "Erro ao submeter o formulário.");
-            }
-
-            alert(result.message || "Mensagem enviada com sucesso!");
-            form.reset();
-            turnstile.reset(); 
-            } catch (err) {
-            console.error(err);
-            alert("Erro: " + err.message);
-            }
-        });
-    </script> -->
-
-    <!-- animação botão tab -->
-     <!-- <script>
-        const tabs = document.querySelectorAll('.nav-link');
-        let index = 0;
-
-        function animateTab() {
-            tabs.forEach(tab => {
-                tab.classList.remove('animate__animated', 'animate__heartBeat', 'animate__slow');
-            });
-
-            const current = tabs[index];
-            current.classList.add('animate__animated', 'animate__heartBeat' , 'animate__slow');
-
-            index = (index + 1) % tabs.length;
-
-            setTimeout(animateTab, 4000); 
-        }
-
-        animateTab();
-    </script> -->
 
     <script src="/assets/js/main.js"></script>
 </body>
