--- a/index.html
+++ b/index.html
@@ -261,15 +261,14 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
-                        <div class="carousel-caption position-static">
-                            <h3>Second slide label</h3>
+                        <div class="d-flex flex-row justify-content-center gap-1 gap-md-5 align-items-center mb-3">
+                            <img src="/assets/images/pagar_tudo1.png" class="d-block app-photo">
+                            <img src="/assets/images/pagar_tudo2.png" class="d-block app-photo">
+                            <img src="/assets/images/pagar_tudo3.png" class="d-block app-photo">
                         </div>
-                    </div>
-                    <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        
                         <div class="carousel-caption position-static">
-                            <h3>Third slide label</h3>
+                            <h3 class="light">Pagar tudo <span class="text-green">em dívida</span></h3>
                         </div>
                     </div>
                 </div>
@@ -288,8 +287,6 @@
                         aria-current="true" aria-label="Slide 1"></button>
                     <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
                         aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
                 </div>
             </div>
     </section>
